Add Butterknife dependency

--- a/tripplanner/app/build.gradle
+++ b/tripplanner/app/build.gradle
@@ -55,4 +55,8 @@ dependencies {
 
 // Testing
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+
+//    Butterknife
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 }
